...
                  color: Colors.blue,
                  borderRadius: BorderRadius.circular(8),
                ),
                child: Row(
                  children: [
                    Text(
                      'Tendenze',
                      style: TextStyle(
                          color: Colors.white),
                    ),
                    Icon(
                      Icons.trending_up_outlined, color: Colors.white
                    ),
...
